[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Riku Lindblad <riku.lindblad@iki.fi>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
redis = "^3.4.1"
boto3 = "^1.12.0"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]
pylint = "pep8"
flake8 = "^3.7.9"
mypy = "^0.761"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
